[package]
name = "book"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/book"
documentation = "https://docs.rs/book"
description = "The Dat Protocol"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]

[dev-dependencies]
clippy = "0.0"
